--- a/page/home/index.css
+++ b/page/home/index.css
@@ -1,71 +1,133 @@
 html,
 body {
-    background-color: #393D46;
+    background-color: gray;
     font-family: 'Roboto', sans-serif;
+    
 }
 
 .l_wrapper {
-    justify-content: center;
-    display: flex;
-    flex-direction: row;
-    top: 0;
+    display: block;
+    position: fixed;
+    top: 8%;
     bottom: 0;
     right: 0;
     left: 0;
+    z-index: 30;
+    overflow: auto ;
 }
 
-.l_img {
+.l_wrapper {
+    -ms-overflow-style: none;  
+    scrollbar-width: none;
+}
+.l_wrapper::-webkit-scrollbar { 
+    display: none;  
+}
+
+.l_head {
+    margin-left: 45%;
+    margin-bottom: 10px;
+
+}
+
+.c_header {
+    color: #393939;
+    font-size: 24px;
+    font-weight: bold;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #393D46;
+    border: 3px solid;
+    height: 70px;
+}
+
+
+.c_nav__head {
+    display: flex;
+    position: absolute;
+    left: 45%;
+    margin: 10px 10px 10px 0px;
+}
+
+
+.c_logo {
     align-content: space-between;
-    width: 50px !important;
-    height: 50px !important;
+    width: 50px;
+    height: 50px;
 }
 
-.l_join_us {
-    align-items: flex-end !important;
-    margin: 10px 15px;
-    color: #fff;
+.l_join__us {
+    position: relative;
+    float: right;
 }
 
-.l_card_container {
-    margin-top: 10px;
-    padding: 10px;
-    height: auto;
-    width: auto;
+.l_join__us button {
+    color: white;
+    font-size : 12px;
+}
+
+.l_content {
+     overflow: scroll;
+}
+
+.l_card__container {
     background-color: white;
     border-radius: 10px;
+    margin-top: 5px;
+    background: #fff;
+	border: 1px solid;
+	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+	border-radius: 3px;
+	padding: 12px;
+	max-width: 472px;
+	min-height: 200px;
+}
+
+.c_button {
+    float: right;
+   
+}
+
+.c_button button {
+    color: white;
+    font-size: 12px;
 }
 
 .l_profile {
     border-radius: 100px;
-    width: 50px !important;
-    height: 50px !important;
+    width: 50px;
+    height: 50px;
 }
 
-.l_img_container {
+.l_img__container {
     display: flex;
     flex-direction: row;
 }
 
 .l_span {
-    padding: 5px 5px;
+    padding: 10px 5px;
     display: flex;
     flex-direction: column;
 }
 
-.l_posting_img {
+.l_posting__img {
     margin-top: 5px;
     border-radius: 5px;
+    width: 373px;
+    height: 182px;      
 }
 
-.l_text_content {
+.l_text__content {
     text-align: justify;
 }
 
-.l_btn_container {
+.l_btn__container {
     text-align: center;
 }
 
-.l_btn_style {
+.l_btn__style {
     text-transform: uppercase;
     color: white;
     width: 200px;
@@ -74,3 +136,39 @@ body {
     border-radius: 50px;
     border-width: 0px;
 }
+
+.l_img_container {
+    display: flex;
+}
+
+.l_posting_img {
+  width:  100%;
+  height: auto;
+}
+
+.c_title {
+    margin: 10px 10px 10px 0px;
+}
+
+.c_position {
+    font-size: 10px;
+}
+
+.l_btn_container {
+    position: relative;
+    width:100%;
+    height: 30px;
+}
+
+.l_btn_container button {
+    width: 96px;
+    height: 24px;
+    border: 1px solid #3e99fd;
+    border-radius: 10px;
+    color :  #3e99fd;
+    background: white;
+    position: relative;
+    left: 35%;
+    top: 5px;
+}
+
