--- a/page/home/index.css
+++ b/page/home/index.css
@@ -40,7 +40,7 @@ body {
     left: 0;
     background-color: #393D46;
     border: 3px solid;
-    height: 70px;
+    height: 50px;
 }
 
 
@@ -48,9 +48,7 @@ body {
     display: flex;
     position: absolute;
     left: 45%;
-    margin: 10px 10px 10px 0px;
 }
-
 
 .c_logo {
     align-content: space-between;
@@ -80,8 +78,6 @@ body {
 	border: 1px solid;
 	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
 	border-radius: 3px;
-	padding: 12px;
-	max-width: 472px;
 	min-height: 200px;
 }
 
@@ -93,6 +89,8 @@ body {
 .c_button button {
     color: white;
     font-size: 12px;
+    margin-right: 5px;
+    font-weight: bold;
 }
 
 .l_profile {
@@ -139,6 +137,7 @@ body {
 
 .l_img_container {
     display: flex;
+    padding: 12px;
 }
 
 .l_posting_img {
@@ -147,7 +146,8 @@ body {
 }
 
 .c_title {
-    margin: 10px 10px 10px 0px;
+    margin: 0px 0px 0px 0px;
+    padding: 12px;
 }
 
 .c_position {
@@ -157,7 +157,7 @@ body {
 .l_btn_container {
     position: relative;
     width:100%;
-    height: 30px;
+    height: 40px;
 }
 
 .l_btn_container button {
